fixed footer. It was flex- wrapping along with the elements within the main element and distorting their full width

--- a/custom.css
+++ b/custom.css
@@ -21,7 +21,7 @@
 
 /* attribution styling by frontendmentor */
 .attribution {
-    font-size: 11px;
+    font-size: 14px;
     text-align: center;
     color: hsl(224, 30%, 27%, 0.65)
   }
